--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #a5d6a7;
+    background-color: #2c6e2f; /* ירוק כהה */
     text-align: center;
     color: #2e7d32;
     display: flex;
@@ -45,4 +45,17 @@ header {
     height: 100px;
     object-fit: cover;
     border-radius: 10px;
+}
+
+.difficulty-bar {
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.difficulty-bar span {
+    display: block;
+    height: 100%;
+    border-radius: 5px;
 }
