--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ h2.difficulty-title {
 }
 
 .drop.full {
-    background-color: #2e7d32;
+    background-color: #1e0fbf;
 }
 
 /* עיצוב מד הקושי */
